Fix page shift while using design tool

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,7 @@
 @import "shadcn/tailwind.css";
 html {
   overflow-x: hidden;
+  scrollbar-gutter: stable;
 }
 
 body {
